# HelloWorld

./: .gitignore
HelloWorldCpp/: CMakeLists.txt  HelloWorldCpp.sln
HelloWorldCpp/HelloWorldCpp/: HelloWorldCpp.vcxproj  HelloWorldCpp.vcxproj.filters  ReadMe.txt  version_number.h
HelloWorldCpp/app/: CMakeLists.txt  HelloWorldCpp.cpp  stdafx.cpp  version_number.h
scripts/: build_all.bat
